docs: add API Reference and Accessibility to alerts, progress, toasts
- alerts.md: full API table, ARIA guidance, keyboard support, best practices
- progress.md: API table, ARIA example, usage guidance
- toasts.md: API table, aria-live patterns, keyboard support
- Partial consistency sweep (3 of 21 components updated)

--- a/V0.2-OVERNIGHT-TASKS.md
+++ b/V0.2-OVERNIGHT-TASKS.md
@@ -89,17 +89,19 @@
 - [x] Size/type validation patterns
 - [x] CSS styles added to `styles/docs.css`
 
-### Task 4.2: Documentation Consistency Sweep
-- [ ] Ensure all component pages have consistent structure
-- [ ] Verify all API tables are complete
-- [ ] Check accessibility sections
+### Task 4.2: Documentation Consistency Sweep (Partial)
+- [x] Added API Reference + Accessibility to alerts.md
+- [x] Added API Reference + Accessibility to progress.md
+- [x] Added API Reference + Accessibility to toasts.md
+- [ ] Remaining: 18 more components need API Reference (lower priority)
 
 ---
 
 ## Current Sprint
-**Sprint 6:** Phase 4 - File Upload Complete
+**Sprint 6:** Phase 4 - Final Polish
 
 | Time (UTC) | Task | Status |
 |------------|------|--------|
 | 04:56 | Phase 1-3 Complete, starting Phase 4 | Complete |
 | 04:57 | Task 4.1: File Upload component (md + CSS) | Complete |
+| 04:58 | Task 4.2: API/A11y for alerts, progress, toasts | Complete |
